# posicionamiento_en_chacra

./: CMakeLists.txt  README.md
ds/: dataset.txt
include/: db.h  detectar_troncos.h  gps.h  lidar.h  ui_gfx.h  vars.h
src/: config.txt  db.cpp  detectar_troncos.cpp  gps.cpp  ground.cpp  lidar.cpp  main.cpp  ui_gfx.cpp  velocidad.cpp
